--- a/css/style.css
+++ b/css/style.css
@@ -545,7 +545,7 @@ p{
         top: 100%;
         right: 0;
         width: 100%;
-        background-color: var(--primary-color);
+        background-color: var(--praimary-color);
         padding: 40px;
         display: block;
         text-align: center;
